deCluttered script/squashed DOM bug

--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ COOL BACKGROUND (OCEAN,OPTICALillusion)
 */
 
 .jumbotron{
-    background:url(https://media.istockphoto.com/vectors/abstract-background-with-dynamic-effect-optical-illusion-of-of-space-vector-id1183875177?k=6&m=1183875177&s=170667a&w=0&h=ArC1bzoa1bZmNZZVnu3kx-pqiIcQUEGbhX2z-LpNP0w=);
+    background:url(https://i.pinimg.com/564x/62/08/f5/6208f50017552efca4b8cf10ef96408d.jpg);
 }
 
 /* psudo classes, hover states */
